# payments-infra

./: .gitignore  AGENTS.md  CLAUDE.md  ECR_SETUP_STATUS.md  Makefile  README.md
.cursor/: mcp.json
.sudocode/: config.json  issues.jsonl  specs.jsonl
docs/: ECR_DEPLOYMENT_GUIDE.md
frontend/: Dockerfile  README.md  nginx.conf  vite.config.js
frontend/src/: App.css  (+1 more)
infrastructure/migrations/: README.md  alembic.ini  pyproject.toml
infrastructure/migrations/alembic/: env.py
infrastructure/migrations/alembic/versions/: 09c2b295afcd_add_mock_processor_to_allowed_list.py  9a82c6d3b654_initial_schema_payment_events_db.py
scripts/: build-and-push-all.sh  build-and-push.sh  generate_protos.sh  init_localstack.sh  init_localstack_container.sh  init_localstack_e2e.sh  init_localstack_test.sh  migrate_payment_events_db.sh  migrate_payment_token_db.sh  reset_payment_events_db.sh  reset_payment_token_db.sh  seed_test_data.py  setup_local_db.sh  validate_local_env.py  wait_for_e2e_services.sh
services/auth-processor-worker/: .env.template  Dockerfile  MOCK_PROCESSOR.md  Makefile  README.md  STRIPE_SETUP.md  config.yaml  entrypoint.sh  pyproject.toml
services/auth-processor-worker/examples/: mock_processor_usage.py  payment_token_client_usage.py
services/auth-processor-worker/src/auth_processor_worker/: config.py  logging_config.py  main.py
services/auth-processor-worker/src/auth_processor_worker/clients/: __init__.py  payment_token_client.py
services/auth-processor-worker/src/auth_processor_worker/handlers/: __init__.py  processor.py
services/auth-processor-worker/src/auth_processor_worker/infrastructure/: database.py  event_store.py  locking.py  read_model.py  sqs_consumer.py  transaction.py
services/auth-processor-worker/src/auth_processor_worker/models/: __init__.py  authorization.py  exceptions.py
services/auth-processor-worker/src/auth_processor_worker/processors/: __init__.py  base.py  factory.py  mock_processor.py  stripe_processor.py
services/auth-processor-worker/tests/: conftest.py
services/auth-processor-worker/tests/integration/: IMPLEMENTATION_COMPLETE.md  README.md  STRIPE_SETUP.md  conftest.py  test_locking_integration.py  test_payment_token_client_integration.py  test_sqs_consumer_integration.py  test_stripe_real_api.py  test_stripe_with_tokens.py  test_transaction_atomicity.py  test_worker_end_to_end.py
services/auth-processor-worker/tests/integration/fixtures/: __init__.py  sqs_fixtures.py  token_fixtures.py  worker_fixtures.py
services/auth-processor-worker/tests/unit/: test_locking.py  test_mock_processor.py  test_payment_token_client.py  test_payment_token_client_config.py  test_processor.py  test_processor_factory.py  test_sqs_consumer.py  test_stripe_processor.py  test_transaction.py
services/authorization-api/: Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
services/authorization-api/src/authorization_api/: config.py  logging_config.py
services/authorization-api/src/authorization_api/api/: main.py  models.py
services/authorization-api/src/authorization_api/api/routes/: authorize.py  status.py
services/authorization-api/src/authorization_api/domain/: events.py  read_models.py
services/authorization-api/src/authorization_api/infrastructure/: database.py  event_store.py  outbox.py  outbox_processor.py  sqs_client.py
services/authorization-api/tests/: README.md  conftest.py
services/authorization-api/tests/e2e/: __init__.py  test_authorization_e2e.py
services/authorization-api/tests/integration/: test_authorize_integration.py  test_outbox_processor_integration.py  test_status_integration.py
services/authorization-api/tests/unit/: test_authorize.py  test_config.py  test_health.py  test_outbox_processor.py  test_status.py
services/payment-token/: API_PARTNER_KEY_USAGE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  alembic.ini  docker-compose.integration.yml  entrypoint.sh  pyproject.toml  test_migration_f582cbafbd6f.py  verify_decrypt_endpoint.py  verify_setup.py
services/payment-token/alembic/: env.py
services/payment-token/alembic/versions/: 04ffb16fe291_add_card_identity_tokens_table.py  1064b0cee9ac_add_payment_identity_mappings_table.py  25d03b185558_add_encryption_key_id_to_payment_tokens_.py  8600e94a71ce_initial_schema_with_payment_tokens_.py  a66bfa1947a4_add_payment_identity_tokens_table.py  ceb9faac3262_add_payment_identity_mappings_table.py  f582cbafbd6f_add_saved_card_fields_to_payment_tokens.py
services/payment-token/src/payment_token/: config.py
services/payment-token/src/payment_token/api/: auth.py  dependencies.py  internal_routes.py  main.py  models.py  routes.py
services/payment-token/src/payment_token/domain/: __init__.py  encryption.py  identity.py  identity_token.py  services.py  token.py
services/payment-token/src/payment_token/infrastructure/: __init__.py  audit.py  database.py  kms.py  models.py  repository.py
services/payment-token/tests/: API_PARTNER_KEY_TESTS.md  README.md  conftest.py
services/payment-token/tests/e2e/: README.md  conftest.py  docker-compose.test.yml  e2e_test_results.txt  test_api_contracts.py  test_api_partner_key_e2e.py  test_decrypt_behaviors.py  test_token_creation_behaviors.py  test_token_retrieval_behaviors.py
services/payment-token/tests/integration/: __init__.py  test_api_partner_key_flow.py  test_create_token.py  test_decrypt_internal.py  test_identity_repository.py
services/payment-token/tests/unit/: test_api_partner_encryption.py  test_encryption.py  test_identity.py  test_kms.py  test_token_domain.py
services/payment-token/tests/unit/infrastructure/: test_identity_repository.py
shared/python/payments_common/: pyproject.toml
shared/python/payments_proto/: README.md  pyproject.toml
shared/python/payments_proto/payments_proto/payments/v1/: authorization_pb2.py  authorization_pb2.pyi  common_pb2.py  common_pb2.pyi  events_pb2.py  events_pb2.pyi  payment_token_pb2.py  payment_token_pb2.pyi
terraform/: .gitignore  README.md
tests/: README.md  debug_token_creation.py  pytest.ini  requirements.txt  tox.ini
(+48 files in other folders)
