[tool.poetry]
name = "payment-events-migrations"
version = "0.1.0"
description = "Database migrations for payment_events_db"
authors = ["randy <ssh.randy@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
