[tool.poetry]
name = "authorization-api"
version = "0.1.0"
description = "Payment authorization API with event sourcing"
authors = []
readme = "README.md"
packages = [{include = "authorization_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
asyncpg = "^0.29.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
protobuf = "^4.25.0"
boto3 = "^1.34.0"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
black = "^23.12.0"
ruff = "^0.1.0"
mypy = "^1.8.0"
httpx = "^0.26.0"
alembic = "^1.17.1"
psycopg2-binary = "^2.9.11"
pytest-xdist = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests requiring real database and LocalStack",
    "e2e: marks tests as end-to-end tests requiring full system integration",
]
asyncio_mode = "auto"
