[tool.poetry]
name = "payment-token"
version = "0.1.0"
description = "PCI-compliant payment tokenization service"
authors = []
readme = "README.md"
packages = [{include = "payment_token", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
boto3 = "^1.34.0"
cryptography = "^41.0.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
protobuf = "^4.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
black = "^23.12.0"
ruff = "^0.1.0"
mypy = "^1.8.0"
moto = "^5.0.0"
pytest-mock = "^3.12.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
